@@ -240,6 +240,8 @@ BUGFIXES:
   ZOOKEEPER-682. Event is not processed when the watcher is set to watch "/"
   if chrooted (Scott Wang via mahadev)
 
+  ZOOKEEPER-687. LENonterminatetest fails on some machines. (mahadev)
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
